# pixi-kernel

./: .dockerignore  .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codecov.yml  eslint.config.mjs  noxfile.py  package.json  pixi.toml  pyproject.toml  tox.ini  tsconfig.json
.binder/: pixi.toml
.binder/example/: example.ipynb  pixi.toml
.github/workflows/: ci.yml  release.yml
assets/: kernel.json
jupyter-config/server-config/: pixi_kernel.json
kernels/pixi-kernel-ark/: kernel.json
kernels/pixi-kernel-bash/: kernel.json
kernels/pixi-kernel-ipykernel/: kernel.json
kernels/pixi-kernel-ir/: kernel.json
kernels/pixi-kernel-python3/: kernel.json
kernels/pixi-kernel-r-irkernel/: kernel.json
kernels/pixi-kernel-xcpp11/: kernel.json
kernels/pixi-kernel-xcpp14/: kernel.json
kernels/pixi-kernel-xcpp17/: kernel.json
pixi_kernel/: __init__.py  __main__.py  async_subprocess.py  compatibility.py  env.py  fallback.py  handlers.py  provisioner.py  readiness.py  types.py
schema/: plugin.json
scripts/: update-lock.sh
src/: env.tsx  handler.ts  index.tsx
src/pixi_kernel/: __init__.py  __main__.py  errors.py  exceptions.py  kernels.py  pixi.py  provisioner.py
tests/integration/: kernel.py  pixi.toml
tests/integration/bash_kernel/: kernel.py  pixi.toml
tests/integration/ipykernel/: kernel.py  pixi.toml
tests/integration/r-irkernel/: kernel.py  pixi.toml
tests/integration/xeus-cling/: kernel.py  pixi.toml
tests/unit/: conftest.py  test_compatibility.py  test_pixi.py  test_provisioner.py  test_readiness.py
tests/unit/data/bad_pixi_toml/: pixi.toml
tests/unit/data/missing_ipykernel/: pixi.toml
tests/unit/data/non_existing_dependency/: pixi.toml
tests/unit/data/pixi_in_pixi/: pixi.toml
tests/unit/data/pixi_in_pixi/good_project/: pixi.toml
tests/unit/data/pixi_project/: pixi.toml
tests/unit/data/pyproject_project/: pyproject.toml
tests/unit/data/transitive_dependency/: pixi.toml
