[project]
name = "pixi-kernel"
version = "0.2.0"
description = "Jupyter kernels using Pixi for reproducible notebooks"
license = { text = "MIT" }
authors = [
    { name = "Renan Rodrigues dos Santos", email = "renan.engmec@gmail.com" },
]

readme = "README.md"
keywords = ["kernel", "jupyter", "pixi"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

requires-python = ">=3.8,<4.0"
dependencies = ["jupyter-client>=7", "msgspec>=0.18"]

[project.urls]
Documentation = "https://github.com/renan-r-santos/pixi-kernel"
Homepage = "https://github.com/renan-r-santos/pixi-kernel"
Repository = "https://github.com/renan-r-santos/pixi-kernel"

[project.entry-points."jupyter_client.kernel_provisioners"]
pixi-provisioner = "pixi_kernel.provisioner:PixiProvisioner"

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "N", # pep8-naming
    "RUF", # ruff
    "B", # flake8-bugbear
    "N", # flake8-broken-line
    "C4", # flake8-comprehensions
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "ERA", # flake8-eradicate
]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:Jupyter is migrating its paths to use standard platformdirs",
]

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = ["src/", ".pixi/envs/**/lib/python*/site-packages/"]

[tool.hatch.build.targets.wheel.shared-data]
"kernels" = "share/jupyter/kernels"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
