[project]
name = "pixi-kernel"
version = "0.5.2"
description = "Jupyter kernels using Pixi for reproducible notebooks"
license = { text = "MIT" }
authors = [
    { name = "Renan Rodrigues dos Santos", email = "renan.engmec@gmail.com" },
]

readme = "README.md"
keywords = ["kernel", "jupyter", "pixi"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

requires-python = ">=3.9,<4.0"
dependencies = ["jupyter-client>=7", "pydantic>=2,<3"]

[project.urls]
Documentation = "https://github.com/renan-r-santos/pixi-kernel"
Homepage = "https://github.com/renan-r-santos/pixi-kernel"
Repository = "https://github.com/renan-r-santos/pixi-kernel"

[tool.uv]
dev-dependencies = [
    "jupyter-kernel-test>=0.7,<0.8",
    "mypy>=1,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<0.26",
    "pytest-cov>=6,<7",
    "ruff>=0.8,<0.9",
    "tox-uv>=1,<2",
]

[project.entry-points."jupyter_client.kernel_provisioners"]
pixi-kernel-provisioner = "pixi_kernel.provisioner:PixiKernelProvisioner"

[tool.ruff]
src = ["src"]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "I",     # isort
    "N",     # pep8-naming
    "RUF",   # ruff
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "N",     # flake8-broken-line
    "C4",    # flake8-comprehensions
    "D",     # pydocstyle
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "ERA",   # flake8-eradicate
]

# D1xx: Missing docstrings
#`one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
#`multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
extend-ignore = ["D1", "D203", "D213"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Jupyter is migrating its paths to use standard platformdirs",
]
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_empty = true

[tool.hatch.build.targets.wheel.shared-data]
"kernels" = "share/jupyter/kernels"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
